[package]
name = "greenback"
version = "0.0.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
uuid = { version = "1.3.1", features = ["serde", "v4", "js"]}
time = { version = "0.3.20", features = ["serde", "wasm-bindgen"]}
async-trait = "0.1.68"

anyhow = "1"
thiserror = "1"

rand = "0.8.5"

cfg-if = "1.0.0"
# worker = "0.0.16"
worker = { git = "https://github.com/FlareLine/workers-rs", branch = "d1-support", features=["d1"] }
wasm-bindgen-futures = "0.4.34"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.67"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
